# openbsw-rust

./: .gitignore  Cargo.toml  NOTICE  README.md  deny.toml  rust-toolchain.toml
crates/bsw-async/: Cargo.toml
crates/bsw-async/src/: cyclic.rs  lib.rs  posix.rs
crates/bsw-async/tests/: posix_executor.rs
crates/bsw-bsp-stm32/: Cargo.toml  build.rs  memory_f413.x  memory_g474.x  rom_crc.x
crates/bsw-bsp-stm32/.cargo/: config.toml
crates/bsw-bsp-stm32/examples/: app_f413.rs  app_g474.rs  blink_f413.rs  blink_g474.rs  bsw_stack_f413.rs  bsw_stack_g474.rs  can_busoff_g474.rs  can_loopback_f413.rs  can_loopback_g474.rs  can_server_f413.rs  can_server_g474.rs  can_stress_f413.rs  can_tester_f413.rs  can_tester_g474.rs  mpu_negative_g474.rs  nvm_test_f413.rs  nvm_test_g474.rs  safety_fault_g474.rs  uds_server_f413.rs  uds_server_g474.rs
crates/bsw-bsp-stm32/src/: adc.rs  board.rs  board_apps.rs  can_bxcan.rs  can_fdcan.rs  can_health.rs  can_isr.rs  clock_f4.rs  clock_g4.rs  diag_can.rs  dynamic_client.rs  fault.rs  flash_f4.rs  flash_g4.rs  gpio.rs  gpio_manager.rs  interrupt.rs  lib.rs  mmio.rs  nvm.rs  pwm.rs  reset.rs  resource_contract.rs  safety_hw.rs  scheduler.rs  storage_conformance.rs  storage_g4.rs  timer.rs  uart_f4.rs  uart_g4.rs  watchdog.rs
crates/bsw-bsp-stm32/tests/: baseline_stm32_can_semantics.rs  drift_stm32_can_semantics.rs
crates/bsw-bsp-tms570/: Cargo.toml
crates/bsw-bsp-tms570/examples/: clock_probe.rs  exception_probe.rs  link_probe.rs  ram_marker.rs  rti_probe.rs  startup_probe.rs  vim_probe.rs
crates/bsw-bsp-tms570/linker/: tms570lc4357-clock-probe.ld  tms570lc4357-exception-probe.ld  tms570lc4357-link-probe.ld  tms570lc4357-ram-marker.ld  tms570lc4357-rti-probe.ld  tms570lc4357-startup-probe.ld  tms570lc4357-vim-probe.ld
crates/bsw-bsp-tms570/src/: board.rs  clock.rs  device.rs  emac.rs  exception.rs  exception_arm.rs  interrupt.rs  lib.rs  mdio.rs  rti.rs  startup.rs  startup_arm.rs  vim.rs
crates/bsw-can/: Cargo.toml
crates/bsw-can/src/: can_id.rs  dlc.rs  error_state.rs  filter.rs  frame.rs  lib.rs  listener.rs  socketcan.rs  transceiver.rs  virtual_bus.rs
crates/bsw-can/tests/: baseline_stm32_can_semantics.rs  can_transceiver.rs  drift_stm32_can_semantics.rs  socketcan_vcan.rs
crates/bsw-com/: Cargo.toml
crates/bsw-com/src/: com.rs  lib.rs  packer.rs  pdu.rs  signal.rs
crates/bsw-com/tests/: com_scheduling.rs  e2e_integration.rs  packing_properties.rs
crates/bsw-common/: Cargo.toml
crates/bsw-common/src/: lib.rs
crates/bsw-console/: Cargo.toml
crates/bsw-console/src/: chario.rs  lib.rs  posix.rs  task.rs
crates/bsw-docan/: Cargo.toml
crates/bsw-docan/src/: addressing.rs  codec.rs  constants.rs  lib.rs  parameters.rs  rx_handler.rs  transport.rs  tx_handler.rs  virtual_transport.rs
crates/bsw-docan/tests/: docan_complete.rs  isotp_transport.rs
crates/bsw-doip/: Cargo.toml
crates/bsw-doip/src/: connection.rs  constants.rs  diagnostic.rs  discovery.rs  entity.rs  header.rs  lib.rs  parameters.rs  payload.rs  result.rs  routing.rs  server.rs
crates/bsw-doip/tests/: baseline_be0029b.rs  complete_doip.rs  diagnostic_transport.rs  drift_be0029b.rs  embedded_composition.rs  embedded_entity.rs  entity_equivalence.rs  posix_entity.rs  tcp_server.rs
crates/bsw-estd/: Cargo.toml
crates/bsw-estd/src/: big_endian.rs  bitset.rs  bounded_string.rs  forward_list.rs  lib.rs  object_pool.rs  ordered_map.rs  vec.rs
crates/bsw-ethernet/: Cargo.toml
crates/bsw-ethernet/src/: endpoint.rs  ip.rs  lib.rs  lwip.rs  network_config.rs  network_interface.rs  tcp.rs  udp.rs
crates/bsw-ethernet/tests/: datagram_link.rs  lwip_fake.rs  network_lifecycle.rs  posix_stack.rs  posix_tcp.rs  posix_udp.rs
crates/bsw-io/: Cargo.toml
crates/bsw-io/src/: adapters.rs  lib.rs  memory_queue.rs  traits.rs  variant_queue.rs
crates/bsw-io/tests/: conformance.rs
crates/bsw-lifecycle/: Cargo.toml
crates/bsw-lifecycle/src/: lib.rs  runlevel.rs
crates/bsw-lifecycle/tests/: runlevel.rs
crates/bsw-logger/: Cargo.toml
crates/bsw-logger/src/: buffer.rs  lib.rs
crates/bsw-middleware/: Cargo.toml
crates/bsw-middleware/models/: vehicle-control.mw
crates/bsw-middleware/src/: codegen.rs  lib.rs  message.rs
crates/bsw-middleware/tests/: baseline_be0029b.rs  middleware.rs  middleware_drift_2026_07_19.rs
crates/bsw-platform/: Cargo.toml
crates/bsw-platform-posix/: Cargo.toml
crates/bsw-platform-posix/src/: critical.rs  entropy.rs  ident.rs  lib.rs  reset.rs  test_control.rs  watchdog.rs
crates/bsw-platform-posix/tests/: conformance.rs
crates/bsw-platform/src/: lib.rs  mock.rs
crates/bsw-reference-core/: Cargo.toml
crates/bsw-reference-core/src/: diagnostics.rs  io.rs  lib.rs
crates/bsw-reference-core/tests/: baseline_be0029b.rs  composition_drift_2026_07_19.rs
crates/bsw-runtime/: Cargo.toml
crates/bsw-runtime/src/: lib.rs
crates/bsw-safety/: Cargo.toml
crates/bsw-safety/src/: lib.rs  mechanisms.rs  monitor.rs  supervisor.rs  task.rs
crates/bsw-storage/: Cargo.toml
crates/bsw-storage/src/: backend.rs  blob.rs  block.rs  conformance.rs  fault.rs  file.rs  jobs.rs  journal.rs  lib.rs  mem.rs
crates/bsw-storage/tests/: blob_stream.rs  cut_points.rs  file_conformance.rs  jobs_queue.rs  journal_recovery.rs  mem_conformance.rs  target_geometries.rs
crates/bsw-time/: Cargo.toml
crates/bsw-time/src/: lib.rs
crates/bsw-transport/: Cargo.toml
crates/bsw-transport/src/: async_layer.rs  lib.rs  pool.rs  routing.rs  simple_router.rs
crates/bsw-transport/tests/: baseline_be0029b.rs  drift_be0029b.rs  transport_routing.rs
crates/bsw-uds/: Cargo.toml
crates/bsw-uds/src/: async_jobs.rs  connection.rs  dem.rs  diag_job.rs  lib.rs  (+9 more)
crates/bsw-util/: Cargo.toml
crates/openbsw-reference-app/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: can_frame.rs  com_packing.rs  docan_state.rs  doip_diagnostic.rs  doip_entity.rs  doip_header.rs  doip_payload.rs  doip_tcp.rs  fixed_containers.rs  isotp_codec.rs  memory_queue.rs  storage_record.rs  uds_connections.rs  uds_dispatch.rs
tools/resource-probe/: Cargo.toml
(+181 files in other folders)
