[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns in embedded code
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"  # optimize for size (embedded target)
