[package]
name = "bsw-async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Heapless runnable and deterministic executor interfaces for OpenBSW Rust"

[features]
default = ["std"]
std = ["bsw-time/std"]

[dependencies]
bsw-time = { path = "../bsw-time", default-features = false }

[lints]
workspace = true
