[package]
name = "bsw-bsp-stm32"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "STM32 F4/G4 Board Support Package — Rust port of OpenBSW STM32 platform"

[features]
stm32f413 = ["dep:stm32f4xx-hal"]
stm32g474 = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
bsw-can = { path = "../bsw-can", default-features = false }
bsw-docan = { path = "../bsw-docan", default-features = false }
bsw-uds = { path = "../bsw-uds", default-features = false }
bsw-lifecycle = { path = "../bsw-lifecycle", default-features = false }
bsw-transport = { path = "../bsw-transport", default-features = false }
bsw-util = { path = "../bsw-util", default-features = false }

# F4-specific
stm32f4xx-hal = { version = "0.23", features = ["stm32f413", "can"], optional = true }

# G4-specific: raw register access (stm32g4xx-hal 0.1 is too immature / fdcan 0.2 broken)

[lints]
workspace = true
