[package]
name = "bsw-bsp-stm32"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "STM32 F4/G4 Board Support Package — Rust port of OpenBSW STM32 platform"

[features]
stm32f413 = ["dep:stm32f4xx-hal"]
stm32g474 = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
bsw-can = { path = "../bsw-can", default-features = false }
bsw-docan = { path = "../bsw-docan", default-features = false }
bsw-uds = { path = "../bsw-uds", default-features = false }
bsw-lifecycle = { path = "../bsw-lifecycle", default-features = false }
bsw-console = { path = "../bsw-console", default-features = false }
bsw-platform = { path = "../bsw-platform", default-features = false }
bsw-reference-core = { path = "../bsw-reference-core", default-features = false }
bsw-safety = { path = "../bsw-safety", default-features = false }
bsw-storage = { path = "../bsw-storage", default-features = false }
bsw-time = { path = "../bsw-time", default-features = false }
bsw-transport = { path = "../bsw-transport", default-features = false }
bsw-util = { path = "../bsw-util", default-features = false }

# F4-specific
stm32f4xx-hal = { version = "0.23", features = ["stm32f413", "can"], optional = true }

# G4-specific: raw register access (stm32g4xx-hal 0.1 is too immature / fdcan 0.2 broken)

[lints]
workspace = true

[[example]]
name = "app_g474"
required-features = ["stm32g474"]

[[example]]
name = "app_f413"
required-features = ["stm32f413"]

[[example]]
name = "blink_f413"
required-features = ["stm32f413"]

[[example]]
name = "blink_g474"
required-features = ["stm32g474"]

[[example]]
name = "bsw_stack_f413"
required-features = ["stm32f413"]

[[example]]
name = "bsw_stack_g474"
required-features = ["stm32g474"]

[[example]]
name = "can_loopback_f413"
required-features = ["stm32f413"]

[[example]]
name = "can_loopback_g474"
required-features = ["stm32g474"]

[[example]]
name = "can_server_f413"
required-features = ["stm32f413"]

[[example]]
name = "can_server_g474"
required-features = ["stm32g474"]

[[example]]
name = "can_tester_f413"
required-features = ["stm32f413"]

[[example]]
name = "can_tester_g474"
required-features = ["stm32g474"]

[[example]]
name = "can_stress_f413"
required-features = ["stm32f413"]

[[example]]
name = "can_stress_g474"
required-features = ["stm32g474"]

[[example]]
name = "can_busoff_f413"
required-features = ["stm32f413"]

[[example]]
name = "can_busoff_g474"
required-features = ["stm32g474"]

[[example]]
name = "nvm_test_g474"
required-features = ["stm32g474"]

[[example]]
name = "nvm_test_f413"
required-features = ["stm32f413"]

[[example]]
name = "mpu_negative_f413"
required-features = ["stm32f413"]

[[example]]
name = "mpu_negative_g474"
required-features = ["stm32g474"]

[[example]]
name = "safety_fault_f413"
required-features = ["stm32f413"]

[[example]]
name = "safety_fault_g474"
required-features = ["stm32g474"]

[[example]]
name = "uds_server_f413"
required-features = ["stm32f413"]

[[example]]
name = "uds_server_g474"
required-features = ["stm32g474"]
