[package]
name = "bsw-com"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AUTOSAR-style COM layer — signal packing/unpacking for CAN PDUs"

[features]
default = ["std"]
std = ["bsw-time/std"]

[dependencies]
bsw-can = { path = "../bsw-can", default-features = false }
bsw-estd = { path = "../bsw-estd", default-features = false }
bsw-time = { path = "../bsw-time", default-features = false }
bsw-util = { path = "../bsw-util", default-features = false }

[lints]
workspace = true
