[package]
name = "bsw-estd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fixed-capacity containers for embedded BSW — Rust port of OpenBSW estd"

[features]
default = ["std"]
std = []

[lints]
workspace = true
