[package]
name = "bsw-ethernet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ethernet/TCP/UDP abstraction for embedded BSW — Rust port of OpenBSW cpp2ethernet"

[features]
default = ["std"]
std = ["bsw-lifecycle/std", "bsw-logger/std"]
ipv6 = []

[dependencies]
bsw-lifecycle = { path = "../bsw-lifecycle", default-features = false }
bsw-logger = { path = "../bsw-logger", default-features = false }

[lints]
workspace = true
