[package]
name = "bsw-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "I/O abstractions for embedded BSW — Rust port of OpenBSW io"

[features]
default = ["std"]
std = []

[lints]
workspace = true
