[package]
name = "bsw-lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Component lifecycle management for embedded BSW — Rust port of OpenBSW lifecycle"

[features]
default = ["std"]
std = ["bsw-time/std"]

[dependencies]
bsw-time = { path = "../bsw-time", default-features = false }

[lints]
workspace = true
