[package]
name = "bsw-logger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Allocation-free log records, component levels, and bounded buffering for OpenBSW Rust"

[features]
default = ["std"]
std = []

[dependencies]
bsw-time = { path = "../bsw-time", default-features = false }

[lints]
workspace = true
