[package]
name = "bsw-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime statistics and execution monitoring for embedded BSW — Rust port of OpenBSW runtime"

[features]
default = ["std"]
std = []

[lints]
workspace = true
