[package]
name = "bsw-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport message abstraction for embedded BSW — Rust port of OpenBSW transport"

[features]
default = ["std"]
std = []

[lints]
workspace = true
