[package]
name = "bsw-uds"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UDS diagnostics (ISO 14229) service framework — Rust port of OpenBSW uds"

[features]
default = ["std"]
std = []

[dependencies]
bsw-transport = { path = "../bsw-transport", default-features = false }

[lints]
workspace = true
