[package]
name = "bsw-uds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UDS diagnostics (ISO 14229) service framework — Rust port of OpenBSW uds"

[features]
default = ["std"]
std = ["bsw-time/std"]

[dependencies]
bsw-time = { path = "../bsw-time", default-features = false }
bsw-transport = { path = "../bsw-transport", default-features = false }

[lints]
workspace = true
