[package]
name = "bsw-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility modules for embedded BSW — Rust port of OpenBSW util"

[features]
default = ["std"]
std = []

[lints]
workspace = true
